--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Maze</title>
     <style>
         body, html {
-            height: 100%;
+            height: 100vh;
             margin: 0;
             padding: 0;
             overflow-x: hidden;
